Minor: Fix underlines for HTML headings
The underlines in HTML headings (H1 and H2) were a bit too close
to the text bottom for my taste. This commit patches them up
by adding a bit of bottom padding

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -47,6 +47,9 @@
 
 .post-content h1,
 .post-content h2  {
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-bottom: 3px;
   border-bottom: 1.5px solid gray;
 }
 
